fix: fix raw sql exception to a custom exception.